# PianoScripter

./: .gitignore  README.md  TOOLS.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: deploy.yml
docs/: research-report.md
src/notes_scripter/: __init__.py  cli.py  pipeline.py  render.py  score.py  server.py  transcribe.py  ultra.py
src/notes_scripter/static/: i18n.js  index.html
src/piano_scripter/: __init__.py  cli.py  pipeline.py  render.py  score.py  server.py  ultra.py
src/piano_scripter/static/: app.js  i18n.js  index.html  roll.js  style.css
tests/: test_pipeline_e2e.py  test_render.py  test_score.py  test_ultra.py
tools/: export_onnx.py  make_fixtures.py
tools/oaf/: bp_transcribe.py  model_io.py  oaf_transcribe.py  patch_bias.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/public/: _headers  coi-serviceworker.min.js
web/scripts/: smoke-live.mjs  smoke.mjs
web/src/: App.vue  i18n.js  pdf.js  roll.js  style.css
web/src/audio/: capture-worklet.js  decode.js  mic.js  resample.js  tempo.js  trim.js  wav.js
web/src/engine/: basicpitch-dsp.js  basicpitch.js  bytedance-post.js  bytedance.js  engine.js  keydetect.js  live.js  midi.js  model-availability.js  models.js  musicxml.js  oaf.js  quantize.js  score.js  transcribe.worker.js  verovio.worker.js
web/tests/: basicpitch.spec.js  bytedance-post.spec.js  models.spec.js  quantize-adaptive.spec.js  quantize.spec.js  score.spec.js  silence.spec.js  trim.spec.js  verovio.spec.js
web/tests/fixtures/: basicpitch.json  bytedance_post.json  quantize.json  trim.json
