[project]
name = "notes-scripter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paul", email = "pauldubois98@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.9.0",
    "fastapi>=0.139.0",
    "music21>=10.5.0",
    "onnxruntime>=1.27.0",
    "piano-transcription-inference>=0.0.6",
    "pypdf>=6.14.2",
    "python-multipart>=0.0.32",
    "rich>=15.0.0",
    "structlog>=26.1.0",
    "torch>=2.12.1",
    "typer>=0.26.8",
    "uvicorn[standard]>=0.50.0",
    "verovio>=6.2.1",
]

[project.scripts]
notes-scripter = "notes_scripter.cli:app"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.8"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
markers = ["slow: needs the model checkpoint / heavy compute"]
addopts = "-m 'not slow'"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
